...
                            <constraint firstItem="BvO-CO-tzF" firstAttribute="bottom" secondItem="DaY-p5-6bq" secondAttribute="bottom" id="dk8-Ti-dmF"/>
                            <constraint firstItem="DaY-p5-6bq" firstAttribute="top" secondItem="zVn-1S-0Qs" secondAttribute="top" constant="10" id="hi4-Aa-l5h"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="BvO-CO-tzF"/>
                    </view>
                    <toolbarItems>
                        <barButtonItem title="Add" id="thY-gF-c6O">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="addClick:" destination="bdV-ea-VLl" id="eXn-pY-Pxi"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
...
                        <connections>
                            <outlet property="dataSource" destination="lle-XM-QfC" id="8y7-Ft-f29"/>
                            <outlet property="delegate" destination="lle-XM-QfC" id="WBm-gM-WWj"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Todo" id="Frs-U5-B4D">
                        <barButtonItem key="leftBarButtonItem" title="Show Completed" id="eqy-AK-OsW">
                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="showCompleted:" destination="lle-XM-QfC" id="uUE-ed-xWD"/>
                            </connections>
                        </barButtonItem>
...
                                <rect key="frame" x="0.0" y="407" width="375" height="260"/>
                                <subviews>
                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aeL-e5-807">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <items>
                                            <navigationItem title="Select a date" id="mfL-jZ-eKS" userLabel="Select a due date">
                                                <barButtonItem key="leftBarButtonItem" title="Cancel" id="bmh-IY-Vcm">
                                                    <connections>
                                                        <action selector="cancelSetDate:" destination="Pun-f4-N1E" id="6V4-jH-aGA"/>
                                                    </connections>
                                                </barButtonItem>
                                                <barButtonItem key="rightBarButtonItem" title="Done" id="KhM-sU-Zvb">
                                                    <connections>
                                                        <action selector="doneSetDate:" destination="Pun-f4-N1E" id="ZV1-Lo-OlN"/>
                                                    </connections>
                                                </barButtonItem>
                                            </navigationItem>
                                        </items>
...
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="35"/>
                                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="35" id="o8b-dv-tCe"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                                <state key="normal" title="Set a due date">
                                                    <color key="titleColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="setDueDate:" destination="Pun-f4-N1E" eventType="touchUpInside" id="2KL-eH-VgO"/>
                                                </connections>
                                            </button>
...
                                                    <action selector="cancel:" destination="Pun-f4-N1E" eventType="touchUpInside" id="Jcr-tK-gPo"/>
                                                </connections>
                                            </button>
                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="245" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RiI-JH-NUN">
                                                <rect key="frame" x="-16" y="0.0" width="0.0" height="36"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="doneButton"/>
                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                                <state key="normal" title="Done">
                                                    <color key="titleColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
