...
    }
    
    // this method sets up the navigation bar
    func setupNavBar(){
        //setup navigation bar
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.title = "Journal"
        self.navigationController?.navigationBar.titleTextAttributes = [NSAttributedStringKey.font: UIFont.systemFont(ofSize: 30),NSAttributedStringKey.foregroundColor: UIColor.white]
    }
    
    // this method sets up the search bar
    func setupSearchBar(){
        //setup search bar
...
        tableView.deselectRow(at: indexPath, animated: true)
    }
    
    
    // this method asks the delegate for the actions to display in response to a swipe in the specified row.
    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        let delete = UITableViewRowAction(style: .default, title: "Delete") { (action, indexPath) in
            
            let entry = self.filterEntries.reversed()[indexPath.row]
            self.context.delete(entry)
            (UIApplication.shared.delegate as! AppDelegate).saveContext()
            
            self.fetchEntries()
...
