...
    
    // this method sets up the navigation bar 
    func setupNavBar() {
        self.navigationItem.rightBarButtonItem = addButton
        self.navigationController?.navigationBar.tintColor = UIColor.white
        navigationItem.largeTitleDisplayMode = .always
        navigationItem.title = "New Entry"
        self.navigationController?.navigationBar.titleTextAttributes = [NSAttributedStringKey.font: UIFont.systemFont(ofSize: 30),NSAttributedStringKey.foregroundColor: UIColor.white]
    }

}

